--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
+    "react-icons-kit": "^2.0.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
